# ubjsc

./: .hgignore  .hgsub  .hgsubstate  .spelling  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Doxyfile.html.in  Doxyfile.man.in  LICENSE.md  README.md  appveyor.yml  bitbucket-pipelines.yml  build-clang.sh  build-gcc.sh  build.bat  build.sh  check-coverage.sh  check-leaks.sh  check-performance.sh  check-profile.sh  check-static-complexity.sh  check-static-cppcheck.sh  check-static-markdown.sh  check-static-py.sh  check-static-shellcheck.sh  check-static-vera++.sh  check-static.sh  check-stress.sh  check.sh  cppcheck.suppressions.txt  dist.sh  docs.sh  install.bat  misc.sh  print-leaks.sh  release.sh  run.sh  sonar-project.properties  (+5 more)
python/: CMakeLists.txt  setup.py  tests_venv.py  tests_venv2.py  ubjspy.c  ubjspy.h
python/test/: unittests.py
src/: CMakeLists.txt  kbtree.h  ubjs.c  ubjs_common.c  ubjs_common_prv.h  ubjs_glue_dict_ptrie.c  ubjs_library.c  ubjs_library_prv.h  ubjs_list.c  ubjs_list.h  ubjs_list_prv.h  ubjs_objects.c  ubjs_parser.c  ubjs_parser_internal.h  ubjs_parser_prv.h  ubjs_primitives.c  ubjs_primitives_prv.h  ubjs_rudefifo.c  ubjs_rudefifo.h  ubjs_selfemptying_list.c  ubjs_selfemptying_list.h  ubjs_selfemptying_list_prv.h  ubjs_trie.c  ubjs_writer.c  ubjs_writer_containers.c  ubjs_writer_internal.h  ubjs_writer_noncontainers.c  ubjs_writer_prv.h
test/: CMakeLists.txt  test.c  test.h  test_common.c  test_common.h  test_frmwrk.c  test_frmwrk.c.orig  test_frmwrk.h  test_list.c  test_list.h  test_main.c  test_main.cpp  test_objects.c  test_objects.h  test_parser.c  test_parser.h  test_parser_array.c  test_parser_array_optimized_type.c  test_parser_lenghted.c  test_parser_non_lenghted.c  test_parser_noncontainers.c  test_parser_object.c  test_parser_object_optimized_type.c  test_parser_tools.c  test_parser_tools.h  test_primitives.c  test_primitives.h  test_trie.c  test_trie.c.orig  test_trie.h  test_ui.c  test_writer.c  test_writer.h  test_writer_array.c  test_writer_array_optimized_type.c  test_writer_array_upgrades.c  test_writer_noncontainers.c  test_writer_object.c  test_writer_object_optimized_type.c  test_writer_object_upgrades.c  (+2 more)
test-frmwrk-perf/: CMakeLists.txt  test_glue_array_generic.c  test_glue_dict_generic.c
tools/: CMakeLists.txt  js2ubj_main.c  ubj2js_main.c  ubjq_main.c
tools/artifact-server/: CMakeLists.txt  configure-start-stop.sh  server.py  start-stop.sh.example  test-server.py.sh
tools/docker/: Dockerfile
tools/test/: array-populated.js  array.v.ubjson  float32.vpp.ubjson2js  gen.sh  object-populated.vpp.ubjson2js  regen.sh  str.ubjson  str.ubjson2js  test-array-populated.sh  test-array.sh  test-false.sh  test-float32.sh  test-int16.sh  test-int32.sh  test-int8.sh  test-null.sh  test-object-populated.sh  test-object.sh  test-str.sh  test-true.sh  test-uint8.sh  test.sh
tools/test/cannot-convert-to-json/: object-noop.ubjson  regen.sh  test-array-noop.sh  test-noop.sh  test-object-noop.sh  test.sh
tools/test/parses/: array-populated.ubjq  array-populated.ubjson  array-populated.ubjson2js  array-populated.v.ubjson  array-populated.v.ubjson2js  array-populated.vpp.ubjson  array-populated.vpp.ubjson2js  array.ubjq  array.v.ubjson2js  array.vpp.ubjson  array.vpp.ubjson2js  false.ubjq  false.v.ubjson  false.v.ubjson2js  false.vpp.ubjson  false.vpp.ubjson2js  float32.ubjq  float32.ubjson  float32.v.ubjson  float32.v.ubjson2js  float32.vpp.ubjson  gen.sh  int16.ubjq  int16.ubjson  int16.v.ubjson  int16.v.ubjson2js  int16.vpp.ubjson  int16.vpp.ubjson2js  int32.ubjq  int32.ubjson  int32.v.ubjson  int32.v.ubjson2js  int32.vpp.ubjson  int32.vpp.ubjson2js  int8.ubjq  (+51 more)
tools/tests/: test_array.js  test_float.js  test_object.js  test_string.js  tests.sh
ubjs/: CMakeLists.txt  ubjs.c  ubjs_common.c  ubjs_common.h  ubjs_objects.c  ubjs_objects.h  ubjs_parser.c  ubjs_parser.h  ubjs_parser_internal.h  ubjs_writer.c  ubjs_writer_internal.h  ubjspy.c
ubjsc-glue-dict-ptrie/src/: CMakeLists.txt  ubjs_glue_dict_ptrie.c  ubjs_glue_dict_ptrie.h  ubjs_glue_dict_ptrie_prv.h
ubjsc-glue-dict-ptrie/test/: CMakeLists.txt  lib-nm.txt  test-nm.sh  test_api.c  test_common.c  test_common.h  test_main.c  test_stress.c
ubjsc/glue-dict-ptrie/: CMakeLists.txt  ubjs_glue_dict_ptrie.h
ubjsc/src/: CMakeLists.txt  ubjs.c  ubjs.h  ubjs_common.c  ubjs_common.h  ubjs_common_prv.h  ubjs_glue_array_array.c  ubjs_glue_array_array.h  ubjs_glue_array_array_prv.h  ubjs_glue_array_list.c  ubjs_glue_array_list.h  ubjs_glue_array_list_prv.h  ubjs_glue_dict_list.c  ubjs_glue_dict_list.h  ubjs_glue_dict_list_prv.h  ubjs_library.c  ubjs_library.h  ubjs_library_prv.h  ubjs_list.c  ubjs_list_prv.h  ubjs_parser.c  ubjs_parser.h  ubjs_parser_processors.c  ubjs_parser_prv.h  ubjs_primitive_array.c  ubjs_primitive_array.h  ubjs_primitive_array_prv.h  ubjs_primitive_char.c  ubjs_primitive_char.h  ubjs_primitive_char_prv.h  ubjs_primitive_false.c  ubjs_primitive_false.h  ubjs_primitive_false_prv.h  ubjs_primitive_float32.c  ubjs_primitive_float32.h  ubjs_primitive_float32_prv.h  ubjs_primitive_float64.c  ubjs_primitive_float64.h  ubjs_primitive_float64_prv.h  ubjs_primitive_hpn.c  (+44 more)
ubjsc/test/: CMakeLists.txt  test_common.c  test_common.h  test_frmwrk.c  test_frmwrk.h  test_glue_array.c  test_glue_array.h  test_glue_array_array.c  test_glue_array_generic.c  test_glue_array_generic.h  test_glue_common.c  test_glue_common.h  test_glue_dict.c  test_glue_dict.h  test_glue_dict_generic.c  test_glue_dict_generic.h  test_glue_dict_list.c  test_glue_mock.c  test_glue_mock.h  test_list.c  test_list.h  test_main.c  test_main_glues.c  test_parser.c  test_parser.h  test_parser_array.c  test_parser_array_optimized_type.c  test_parser_lenghted.c  test_parser_non_lenghted.c  test_parser_object.c  test_parser_object_optimized_type.c  test_parser_tools.c  test_parser_tools.h  test_primitives.c  test_primitives.h  test_writer.c  test_writer.h  test_writer_array.c  test_writer_array_optimized_type.c  test_writer_array_upgrades.c  (+6 more)
ubjtool/: CMakeLists.txt  js2ubj_main.c  ubj2js_main.c
(+130 files in other folders)
